@@ -144,7 +144,7 @@ int get_dev_geometry (int fd, __u32 *cyls, __u32 *heads, __u32 *sects,
 {
 	static struct local_hd_geometry      g;
 	static struct local_hd_big_geometry bg;
-	int err = 0;
+	int err = 0, try_getgeo_big_first = 1;
 
 	if (nsectors) {
 		err = get_sector_count(fd, nsectors);
@@ -163,14 +163,17 @@ int get_dev_geometry (int fd, __u32 *cyls, __u32 *heads, __u32 *sects,
 		{
 			*start_lba = result;
 			 start_lba = NULL;
+			try_getgeo_big_first = 0;	/* if kernel has sysfs, it probably lacks GETGEO_BIG */
 		} else if (fd_is_raid(fd)) {
-			*start_lba = START_LBA_UNKNOWN;  /* RAID: no such thing as a "start_lba" */
+			*start_lba = START_LBA_UNKNOWN;	/* RAID: no such thing as a "start_lba" */
 			 start_lba = NULL;
+			try_getgeo_big_first = 0;	/* no point even trying it on RAID */
 		}
 	}
 
 	if (cyls || heads || sects || start_lba) {
-		if (!ioctl(fd, HDIO_GETGEO_BIG, &bg)) {
+		/* Skip HDIO_GETGEO_BIG (doesn't exist) on kernels with sysfs (>= 2.6.xx) */
+		if (try_getgeo_big_first && !ioctl(fd, HDIO_GETGEO_BIG, &bg)) {
 			if (cyls)	*cyls  = bg.cylinders;
 			if (heads)	*heads = bg.heads;
 			if (sects)	*sects = bg.sectors;
@@ -180,6 +183,11 @@ int get_dev_geometry (int fd, __u32 *cyls, __u32 *heads, __u32 *sects,
 			if (heads)	*heads = g.heads;
 			if (sects)	*sects = g.sectors;
 			if (start_lba)	*start_lba = g.start;
+		} else if (!try_getgeo_big_first && !ioctl(fd, HDIO_GETGEO_BIG, &bg)) {
+			if (cyls)	*cyls  = bg.cylinders;
+			if (heads)	*heads = bg.heads;
+			if (sects)	*sects = bg.sectors;
+			if (start_lba)	*start_lba = bg.start;
 		} else {
 			err = errno;
 			perror(" HDIO_GETGEO failed");
