@@ -1,4 +1,4 @@
-.TH HDPARM 8 "January 2012" "Version 9.39"
+.TH HDPARM 8 "January 2012" "Version 9.41"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
